Gnome: Fix unreadable text in calendar events in older gnome versions

--- a/gtk-3.0/apps/_gnome.scss
+++ b/gtk-3.0/apps/_gnome.scss
@@ -166,8 +166,12 @@
  * Calendar events *
 ********************/
 .color-light{
-  & label, &.timed label {
+  &.timed label {
+    color: $fg_color;
+    opacity: 1;
+  }
+  .week-view &.timed label, & label, .year-view &:not(.timed) label  {
     color: $nord0;
-    opacity:1;
+    opacity: 1;
   }
 }
